// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TouchLayoutPreview > gera snapshots distintos e nomes acessíveis para cada layout > touch-layout-preview-left 1`] = `
<DocumentFragment>
  <div
    aria-label="Prévia do layout com botões à esquerda"
    class="_preview_21c337"
    data-layout="left"
    data-touch-scale="1.000"
    data-touch-sensitivity="1.000"
    role="img"
    style="--touch-preview-scale: 1.000; --touch-preview-sensitivity: 1.000;"
  >
    <div
      class="_device_21c337"
    >
      <div
        class="_side_21c337 _leftSide_21c337"
      >
        <div
          class="_joystickRing_21c337"
        >
          <div
            class="_joystickHandle_21c337"
          />
        </div>
        <div
          class="_utilityRow_21c337"
        >
          <span
            aria-hidden="true"
            class="_utilityButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_utilityBar_21c337"
          />
        </div>
      </div>
      <div
        class="_side_21c337 _rightSide_21c337"
      >
        <div
          class="_actionCluster_21c337"
        >
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
        </div>
        <span
          aria-hidden="true"
          class="_skillButton_21c337"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="_labels_21c337"
    >
      <span
        class="_label_21c337 _leftLabel_21c337"
      >
        Joystick
      </span>
      <span
        class="_label_21c337 _rightLabel_21c337"
      >
        Ações
      </span>
    </div>
    <div
      aria-hidden="true"
      class="_previewMeters_21c337"
    >
      <div
        class="_previewMeter_21c337"
      >
        <span
          class="_previewMeterLabel_21c337"
        >
          Tamanho
        </span>
        <div
          class="_previewMeterTrack_21c337"
        >
          <span
            class="_previewMeterFill_21c337"
            style="width: 100%;"
          />
        </div>
      </div>
      <div
        class="_previewMeter_21c337"
      >
        <span
          class="_previewMeterLabel_21c337"
        >
          Sensibilidade
        </span>
        <div
          class="_previewMeterTrack_21c337"
        >
          <span
            class="_previewMeterFill_21c337"
            data-variant="sensitivity"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TouchLayoutPreview > gera snapshots distintos e nomes acessíveis para cada layout > touch-layout-preview-right 1`] = `
<DocumentFragment>
  <div
    aria-label="Prévia do layout com botões à direita"
    class="_preview_21c337"
    data-layout="right"
    data-touch-scale="1.000"
    data-touch-sensitivity="1.000"
    role="img"
    style="--touch-preview-scale: 1.000; --touch-preview-sensitivity: 1.000;"
  >
    <div
      class="_device_21c337"
    >
      <div
        class="_side_21c337 _leftSide_21c337"
      >
        <div
          class="_joystickRing_21c337"
        >
          <div
            class="_joystickHandle_21c337"
          />
        </div>
        <div
          class="_utilityRow_21c337"
        >
          <span
            aria-hidden="true"
            class="_utilityButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_utilityBar_21c337"
          />
        </div>
      </div>
      <div
        class="_side_21c337 _rightSide_21c337"
      >
        <div
          class="_actionCluster_21c337"
        >
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
          <span
            aria-hidden="true"
            class="_actionButton_21c337"
          />
        </div>
        <span
          aria-hidden="true"
          class="_skillButton_21c337"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="_labels_21c337"
    >
      <span
        class="_label_21c337 _leftLabel_21c337"
      >
        Joystick
      </span>
      <span
        class="_label_21c337 _rightLabel_21c337"
      >
        Ações
      </span>
    </div>
    <div
      aria-hidden="true"
      class="_previewMeters_21c337"
    >
      <div
        class="_previewMeter_21c337"
      >
        <span
          class="_previewMeterLabel_21c337"
        >
          Tamanho
        </span>
        <div
          class="_previewMeterTrack_21c337"
        >
          <span
            class="_previewMeterFill_21c337"
            style="width: 100%;"
          />
        </div>
      </div>
      <div
        class="_previewMeter_21c337"
      >
        <span
          class="_previewMeterLabel_21c337"
        >
          Sensibilidade
        </span>
        <div
          class="_previewMeterTrack_21c337"
        >
          <span
            class="_previewMeterFill_21c337"
            data-variant="sensitivity"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
